[package]
name = "rusty-robokop-utils"
version = "0.1.0"
authors = ["Jason Reilly <jdr0887@gmail.com>"]
edition = "2021"

[dependencies]
chrono = "0.4.38"
csv = "^1.1"
clap = { version = "^4.5", features = ["derive"] }
env_logger = "^0.11"
humantime = "^2.1"
itertools = "^0.13"
lazy_static = "^1.3"
log = { version = "^0.4", features = ["std"] }
rayon = "^1.5"
regex = "^1.5"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }